# all-learner-ai-app

./: .coderabbit.yaml  .env  .gitattributes  .gitignore  .prettierrc  README.md  eslintrc.json  index.html  jest.config.js  package-lock.json  package.json  patch.diff  vite.config.js  vite.config.mjs  webpack.config.js
.github/workflows/: all-app-sandbox.yml  all-dev-rig-temp.yml  all-dev-rig.yml  all-dev-tn-new.yml  all-dev-tn.yml  all-prod-rig.yml  all-prod-tn.yml  all-saas-prod.yml  all-staging-tn.yml  all-temp-staging .yml
asr-utils/: Cargo.toml  LICENSE_MIT
asr-utils/pkg/: indicasr_wasm.d.ts  indicasr_wasm.js  indicasr_wasm_bg.js  indicasr_wasm_bg.wasm  indicasr_wasm_bg.wasm.d.ts  package.json
asr-utils/src/: lib.rs  utils.rs
public/: index.html  sherpa-onnx-wasm-main-asr.data
public/models/: kannada.vocab  tamil.vocab
public/sherpa.wasm/: initShrepa.js  sherpa-onnx-wasm-main-asr.js  sherpa-onnx-wasm-main-vad-asr.js
public/whisper.wasm/: initWhisper.js  stream.js
src/: App.js  App.jsx  App.test.js  csp.js  index.css  index.js  index.jsx  setupProxy.js  setupTests.js
src/RFlow/: R1.jsx  R2.jsx  R3.jsx  R4.jsx
src/config/: awsS3.js
src/hooks/: usePreloadAudio.jsx
src/mechanicsComponent/: wordsSentences.jsx
src/routes/: index.js
src/services/: callTelemetryIntract.js  telementryService.js  telemetryService.js  utilService.js
src/store/: configureStore.js
src/ui-components/: backButton.js  practiseSteps.js  progressBar.js
src/utils/: AudioCompare.js  AudioCompare.jsx  Badwords.js  Loader.css  Loader.jsx  RecordVoiceVisualizer.jsx  (+12 more)
(+58 files in other folders)
