[package]
name = "indicasr-wasm"
version = "0.1.0"
authors = ["Nikhil Narasimhan <nikhil.narasimhan99@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
num-complex = "0.4.6"
rustfft = "6.2.0"
mel_spec = "0.2.3"
mel_spec_audio = "0.2.2"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
getrandom = { version = "0.2", features = ["js"] }
wavers = {version = "1.4.3", features = ["ndarray"]}
js-sys = "0.3.69"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
